# RCSB_APP_CHEM HISTORY
   8-Mar-2020  - V0.10 Created module
  15-Mar-2020  - V0.11 Preliminary testing pipeline created
  16-Mar-2020  - V0.12 Preliminary deployment
  18-Mar-2020  - V0.13 Update deployment scripts
  10-Apr-2020  - V0.14 Update default failures and configuration settings
  11-Apr-2020  - V0.15 Further updates in configuration bootstrap
  15-Apr-2020  - V0.16 Add fingerprint scores to descriptor return object
  16-Apr-2020  - V0.17 Reverse the delivered order for the descriptor search results
  16-May-2020  - V0.18 Add preliminary depiction services
  28-Jun-2020  - V0.19 Updated to access dependencies created by RCSB weekly update
  28-Jun-2020  - V0.20 Add simple health check route, memory report on /status, and adjust looking to conform to gunicorn
  29-Jun-2020  - V0.21 Add log filtering options to disable logging healthcheck requests
   1-Jul-2020  - V0.22 Update documentation and dependencies
   1-Jul-2020  - V0.23 Further update of dependencies
  22-Jul-2020  - V0.24 Restore missing dev packages from fastapi[all]
  29-Sep-2020  - V0.25 Pin fastapi dependencies
  30-Sep-2020  - V0.26 Further updates on dependencies.