@@ -4,7 +4,5 @@ fastapi[all] == 0.61.1
 pydantic == 1.6.1
 aiofiles == 0.5.0
 gunicorn == 20.0.4
-#uvicorn == 0.11.8
-#uvicorn == 0.12.1
-rcsb.utils.io >= 0.69
-rcsb.utils.chem >= 0.41
+rcsb.utils.io >= 0.77
+rcsb.utils.chem >= 0.43
